fix overlap title padding and container widths. fix image wobble on card hover. fix button borders being brighter on hover/active.

--- a/scss/components/cards/header-card-overlay.scss
+++ b/scss/components/cards/header-card-overlay.scss
@@ -53,8 +53,8 @@
 
     .card-title-overlap {
         position: relative;
-        margin: 0 15px;
-        padding: 2rem;
+        margin: 0 ($grid-gutter-width/2);
+        padding: 1rem ($grid-gutter-width/2);
 
         .card-subtitle {
             color: $brand-accent;
@@ -62,6 +62,13 @@
             margin-top: 1rem;
         }
 
+        @include media-breakpoint-up(md) {
+            padding: 2rem ($grid-gutter-width/2);
+        }
+
+        @include media-breakpoint-up(lg) {
+            padding: 2rem;
+        }
     }
 
     .form-group{
@@ -105,11 +112,14 @@
   }
 
     .overlap-container{
-        @each $breakpoint, $container-max-width in $container-max-widths
-        {
-            @include media-breakpoint-up($breakpoint) {
-                max-width: calc(#{$container-max-width} + 1rem);
-            }
+
+        @extend .container;
+
+        @include media-breakpoint-up(lg) {
+            max-width: calc(#{map_get($container-max-widths,lg)} + 1rem);
+        }
+        @include media-breakpoint-up(xl) {
+            max-width: calc(#{map_get($container-max-widths,xl)} + 1rem);
         }
 
         z-index: 1;
